--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -19,21 +19,23 @@
 <% form_tag({}, :id => 'date_form') do %>
 
 <fieldset id="date-range"><legend><%= l(:label_date_range) %></legend>
+    <%= select_tag 'period', options_for_select([["Week", "W"], ["Month", "M"]], params[:period]) %>
+    <br />                         
     <%= select_day(@date.day, :prefix => "day", :discard_type => true) %>
     <%= select_month(@date.month, :prefix => "month", :discard_type => true) %>
     <%= select_year(@date.year, :prefix => "year", :discard_type => true) %>
 </fieldset>
 
 <p style="float:right; margin:0px;">
-	<%= link_to_remote ("&#171; #{l(:label_previous)} #{l(:label_week).downcase}"), {:update => "content", :url => params.merge( :date => @date - 7 )} %> |
-	<%= link_to_remote ("#{l(:label_next)} #{l(:label_week).downcase} &#187;"), {:update => "content", :url => params.merge( :date => @date + 7 )} %>
+	<%= link_to_remote ("&#171; #{l(:label_previous)}"), {:update => "content", :url => params.merge( :date => @date - @days )} %> |
+	<%= link_to_remote ("#{l(:label_next)} &#187;"), {:update => "content", :url => params.merge( :date => @date + @days )} %>
 </p>
 
 <p class="buttons">
     <%= link_to_remote l(:button_apply), 
 		{	:update => "content",
 			:with => "Form.serialize('date_form')",
-			:url => params.delete_if {|key, value| [ "date", "day", "month", "year" ].include?(key) }
+			:url => params.delete_if {|key, value| [ "date", "day", "month", "year", "period" ].include?(key) }
 		}, :class => 'icon icon-checked' %>
 </p>
 
