--- a/app/views/schedules/default.html.erb
+++ b/app/views/schedules/default.html.erb
@@ -1,39 +1,37 @@
 <%= breadcrumb link_to(l(:label_schedules_my_index), {:controller => 'schedules', :action => 'my_index' } ) %>
 
 <h2>
-	<%= l(:label_schedules_default, link_to_user(@user)) %>
+    <%= l(:label_schedules_default, link_to_user(@user)).html_safe %>
 </h2>
 
-<% form_tag({:action=> "default"}) do %>
-	<%= hidden_field_tag 'user_id', @user.id unless @user.nil? %>
-	<div class="box">
-		<table class="cal schedule_entry_grid">
-			<thead>
-				<tr><% 7.times do |i| %><th><%= day_name( (@calendar.first_wday+i)%7 )%></th><% end %></tr>
-			</thead>
-			<tbody>
-				<tr>
-					<% (@calendar.startdt..@calendar.enddt).each do |day| %>
-						<td>
-							<% hours = @schedule_default.weekday_hours[day.wday] > 0 ? @schedule_default.weekday_hours[day.wday] : "" %>
-							<%= text_field "schedule_default", day.wday, :size => 3, :value => hours %>
-						</td>
-					<% end %>
-				</tr>
-			</tbody>
-		</table>
-		<%= submit_tag l(:button_save) %>
-	</div>
+<%= form_tag({:action=> "default"}) do %>
+    <%= hidden_field_tag 'user_id', @user.id unless @user.nil? %>
+    <div class="box">
+        <table class="cal schedule_entry_grid">
+            <thead>
+                <tr><% 7.times do |i| %><th><%= day_name( (@calendar.first_wday+i)%7 )%></th><% end %></tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <% (@calendar.startdt..@calendar.enddt).each do |day| %>
+                        <td>
+                            <% hours = @schedule_default.weekday_hours[day.wday] > 0 ? @schedule_default.weekday_hours[day.wday] : "" %>
+                            <%= text_field "schedule_default", day.wday, :size => 3, :value => hours %>
+                        </td>
+                    <% end %>
+                </tr>
+            </tbody>
+        </table>
+        <%= submit_tag l(:button_save) %>
+    </div>
 <% end %>
 
 <% content_for :sidebar do %>
-	<%= render :partial => 'sidebar' %>
+    <%= render :partial => 'sidebar' %>
 <% end %>
 
 <%= javascript_include_tag 'schedules_edit', :plugin => 'redmine_schedules'  %>
 
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag 'schedules', :plugin => 'redmine_schedules' %>
-    <%= javascript_include_tag 'jquery-1.3.2.min.js', :plugin => 'redmine_schedules'  %>
-    <script type="text/javascript">jQuery.noConflict();</script>
 <% end %>
