--- a/app/views/schedules/report.html.erb
+++ b/app/views/schedules/report.html.erb
@@ -1,85 +1,74 @@
-<% content_for :header_tags do %>
-    <%= stylesheet_link_tag 'schedules', :plugin => 'redmine_schedules' %>
-<% end %>
-
-<%
-	# This view is based off of Redmine's timelog. It has been modified
-	# to accommodate the needs of the Schedules plugin. In the event that
-	# changes are made to the original, this file will need to be updated
-	# accordingly. As such, efforts should be made to modify this file as
-	# little as possible as it's effectively a branch that we want to keep
-	# in sync.
-%>
-
-<h2><%= l(:label_schedules_report) %></h2>
-
-<% form_remote_tag(:url => {}, :html => {:method => :get}, :method => :get, :update => 'content') do %>
-  <% @criterias.each do |criteria| %>
-    <%= hidden_field_tag 'criterias[]', criteria, :id => nil %>
-  <% end %>
-  <%# TODO: get rid of the project_id field, that should already be in the URL %>
-  <%= hidden_field_tag 'project_id', params[:project_id] %>
-  <%= render :partial => 'date_range' %>
-
-  <p><%= l(:label_details) %>: <%= select_tag 'columns', options_for_select([[l(:label_year), 'year'],
-                                                                            [l(:label_month), 'month'],
-                                                                            [l(:label_week), 'week'],
-                                                                            [l(:label_day_plural).titleize, 'day']], @columns),
-                                                        :onchange => "this.form.onsubmit();" %>
-
-  <%= l(:button_add) %>: <%= select_tag('criterias[]', options_for_select([[]] + (@available_criterias.keys - @criterias).collect{|k| [l_or_humanize(@available_criterias[k][:label]), k]}),
-                                                          :onchange => "this.form.onsubmit();",
-                                                          :style => 'width: 200px',
-                                                          :id => nil,
-                                                          :disabled => (@criterias.length >= 3)) %>
-     <%= link_to_remote l(:button_clear), {:url => {:project_id => @project, :period_type => params[:period_type], :period => params[:period], :from => @from, :to => @to, :columns => @columns},
-                                           :method => :get,
-                                           :update => 'content'
-                                          }, :class => 'icon icon-reload' %></p>
-<% end %>
-
-<% unless @criterias.empty? %>
-<div class="total-hours">
-<p><%= l(:label_total) %>: <%= html_hours(ScheduleCompatibility::I18n.l_hours(@total_hours)) %></p>
+<div class="contextual">
+<%= link_to_if_authorized l(:button_log_time), {:controller => 'timelog', :action => 'new', :project_id => @project, :issue_id => @issue}, :class => 'icon icon-time-add' %>
 </div>
 
-<% unless @hours.empty? %>
+<%= render_timelog_breadcrumb %>
+
+<h2><%= l(:label_spent_time) %></h2>
+
+<%= form_tag({:controller => 'schedules', :action => 'report',
+              :project_id => @project, :issue_id => @issue},
+            :method => :get, :id => 'query_form') do %>
+  <% @report.criteria.each do |criterion| %>
+    <%= hidden_field_tag 'criteria[]', criterion, :id => nil %>
+  <% end %>
+  <%= render :partial => 'schedules/date_range' %>
+
+  <p><label for='columns'><%= l(:label_details) %></label>: <%= select_tag 'columns', options_for_select([[l(:label_year), 'year'],
+                                                                            [l(:label_month), 'month'],
+                                                                            [l(:label_week), 'week'],
+                                                                            [l(:label_day_plural).titleize, 'day']], @report.columns),
+                                                        :onchange => "this.form.submit();" %>
+
+  <label for='criterias'><%= l(:button_add) %></label>: <%= select_tag('criteria[]', options_for_select([[]] + (@report.available_criteria.keys - @report.criteria).collect{|k| [l_or_humanize(@report.available_criteria[k][:label]), k]}),
+                                                          :onchange => "this.form.submit();",
+                                                          :style => 'width: 200px',
+                                                          :id => nil,
+                                                          :disabled => (@report.criteria.length >= 3), :id => "criterias") %>
+     <%= link_to l(:button_clear), {:project_id => @project, :issue_id => @issue, :period_type => params[:period_type], :period => params[:period], :from => @from, :to => @to, :columns => @report.columns}, :class => 'icon icon-reload' %></p>
+<% end %>
+
+<% unless @report.criteria.empty? %>
+<div class="total-hours">
+<p><%= l(:label_total) %>: <%= html_hours(l_hours(@report.total_hours)) %></p>
+</div>
+
+<% unless @report.hours.empty? %>
+<div class="autoscroll">
 <table class="list" id="time-report">
 <thead>
 <tr>
-<% @criterias.each do |criteria| %>
-  <th><%= l_or_humanize(@available_criterias[criteria][:label]) %></th>
+<% @report.criteria.each do |criteria| %>
+  <th><%= l_or_humanize(@report.available_criteria[criteria][:label]) %></th>
 <% end %>
-<% columns_width = (40 / (@periods.length+1)).to_i %>
-<% @periods.each do |period| %>
+<% columns_width = (40 / (@report.periods.length+1)).to_i %>
+<% @report.periods.each do |period| %>
   <th class="period" width="<%= columns_width %>%"><%= period %></th>
 <% end %>
   <th class="total" width="<%= columns_width %>%"><%= l(:label_total) %></th>
-  <th class="total"><%= l(:label_spent_time) %></th>
 </tr>
 </thead>
 <tbody>
-<%= render :partial => 'report_criteria', :locals => {:criterias => @criterias, :hours => @hours, :level => 0} %>
+<%= render :partial => 'report_criteria', :locals => {:criterias => @report.criteria, :hours => @report.hours, :level => 0} %>
   <tr class="total">
   <td><%= l(:label_total) %></td>
-  <%= '<td></td>' * (@criterias.size - 1) %>
+  <%= ('<td></td>' * (@report.criteria.size - 1)).html_safe %>
   <% total = 0 -%>
-  <% logged_total = 0 -%>
-  <% @periods.each do |period| -%>
-  	<% selected_hours = select_hours(@hours, @columns, period.to_s) %>
-    <% sum = sum_hours(selected_hours); total += sum -%>
-    <% logged_sum = sum_logged_hours(selected_hours); logged_total += logged_sum %>
+  <% @report.periods.each do |period| -%>
+    <% sum = sum_hours(select_hours(@report.hours, @report.columns, period.to_s)); total += sum -%>
     <td class="hours"><%= html_hours("%.2f" % sum) if sum > 0 %></td>
   <% end -%>
   <td class="hours"><%= html_hours("%.2f" % total) if total > 0 %></td>
-  <td class="hours <%= "underscheduled" if logged_total > total %> ">
-  	<%= progress_bar (logged_total/total <= 1 ? 100*logged_total/total : 100), :width => '80px', :legend => html_hours("%.02f" % logged_total) %>
-  </td>
   </tr>
 </tbody>
 </table>
+</div>
 
+<% other_formats_links do |f| %>
+  <%= f.link_to 'CSV', :url => params %>
 <% end %>
 <% end %>
+<% end %>
 
-<% html_title l(:label_schedules_index), l(:label_report) %>
+<% html_title l(:label_spent_time), l(:label_report) %>
+
