display detailed date on edit forms (user proj)

--- a/app/views/schedules/_user.html.erb
+++ b/app/views/schedules/_user.html.erb
@@ -4,7 +4,11 @@
 %>
 <table class="cal schedule_entry_grid">
     <thead>
-        <tr><td></td><% 7.times do |i| %><th><%= day_name( (calendar.first_wday+i)%7 )%></th><% end %></tr>
+        <tr><td></td>
+            <% (calendar.startdt..calendar.enddt).each do |day| %>
+                <th><%= day_name(day.wday) %>, <br/><%= month_name(day.month) %> <%= day.day %></th>
+            <% end %>
+        </tr>
     </thead>
     <tbody>
         <% @projects.each do |project| %>
